扫码添加本地以及购物车页面简单布局

--- a/component/i-swiper/i-swiper.wxss
+++ b/component/i-swiper/i-swiper.wxss
@@ -1,14 +1,13 @@
 /* component/i-swiper/i-swiper.wxss */
 .swiper-wrap{
   height : 320rpx;
-  background-color: red;
 }
 
 .swiper-wrap swiper{
   height : 100%;
   width: 100%;
 }
-.swiper-wrap  image{
+.swiper-wrap swiper image{
   width: 100%;
   height: 100%;
 }
