--- a/pages/shop/shop.wxml
+++ b/pages/shop/shop.wxml
@@ -1,8 +1,6 @@
 <view class="container">
-	<view class="swiper-wrap">
-		<i-swiper data="{{bannerData}}"></i-swiper>
-	</view>
-	<view class="main">
-		main
-	</view>
+
+	<i-swiper data="{{bannerData}}"></i-swiper>
+	<i-qrcode-button bind:getResult="getShopCode"></i-qrcode-button>
+
 </view>
