购物车的加减以及一些其它小功能

--- a/component/i-qrcode-button/i-qrcode-button.wxml
+++ b/component/i-qrcode-button/i-qrcode-button.wxml
@@ -1,6 +1,11 @@
 <view class="main">
-	<view class="qrcode-button" bindtap="handleScanCode">
-		<image src="../../assets/images/qrcode.png"></image>
-		<text>请扫描商品条形码</text>
+	<view wx:if="{{type=='circle'}}" class="qrcode-button" bindtap="handleScanCode">
+		<image src="{{status ? '/assets/images/cart_index.png' : '/assets/images/qrcode.png'}}"></image>
+		<text>{{status ? '去结算' : '请扫描商品条形码'}}</text>
+    <view class='circle' wx:if="{{status}}">{{count}}</view>
 	</view>
+  <view class="add" wx:if="{{type=='add'}}" bindtap="handleScanCode">继续添加</view>
+  <view class="sancode" wx:if="{{type=='button'}}" bindtap="handleScanCode">
+  扫一扫条形码
+ </view>
 	</view>
