--- a/component/i-qrcode-button/i-qrcode-button.wxss
+++ b/component/i-qrcode-button/i-qrcode-button.wxss
@@ -14,6 +14,7 @@
   align-items: center;
   margin-top: 80rpx;
   border: 25rpx solid #FFE49B;
+  position: relative;
 }
 .main .qrcode-button image{
   width: 180rpx;
@@ -24,4 +25,29 @@
   margin-top: 5px;
   width: 180rpx;
   text-align: center;
+}
+.add{
+  color : #fff;
+  margin-top: 5rpx;
+  width: 180rpx;
+  text-align: center;
+  background-color:  #FEBE1B;
+}
+.sancode{
+  border-radius: 15rpx;
+  background-color: #FEBE1B;
+  padding : 20rpx 100rpx;
+}
+.circle{
+  position: absolute;
+  min-width: 60rpx;
+  min-height: 60rpx;
+  right:44rpx;
+  border-radius: 50%;
+  top : 44rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f60;
+  color : #fff;
 }
