--- a/pages/cart/cart.wxss
+++ b/pages/cart/cart.wxss
@@ -6,6 +6,52 @@
 .list{
   padding-bottom : 181rpx;
 }
+.list-item{
+  border-bottom: 1px solid #ccc;
+  padding: 20rpx;
+}
+.list-item-sku{
+  color : #ccc;
+  margin: 10rpx 0;
+}
+.list-item-price{
+  color : #f60;
+}
+.list-item-button-group{
+  display: flex;
+  justify-content:flex-end;
+}
+.decrement, .increment{
+  width: 60rpx;
+  height: 60rpx;
+  line-height: 55rpx;
+  border:none;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  border-radius: 50%;
+  overflow: hidden;
+  color : #fff;
+}
+.decrement{
+  border : 1rpx solid #FEBE1B;
+  color : #FEBE1B;
+}
+.increment{
+  background-color: #FEBE1B;
+}
+.count{
+  border:2rpx solid  #FEBE1B;
+  box-sizing: border-box;
+  height:65rpx;
+  border-radius: 35rpx;
+  width: 150rpx;
+  margin: 0 10rpx;
+  text-align: center;
+  display: flex;
+  align-items: center;
+}
 .settle-ment{
   background-color: yellow;
   position: fixed;
@@ -39,6 +85,32 @@
 .add{
   background-color:  #FEBE1B;
 }
+/* .main .code-button .text{
+  color : #fff;
+  margin-top: 5rpx;
+  width: 180rpx;
+  text-align: center;
+} */
 .settle{
   background-color: #f60;
+}
+.empty-cart{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.cart-image{
+  width:400rpx;
+  height: 350rpx;
+  margin:50rpx 0;
+}
+.tips{
+  color : #ccc;
+  font-size: 40rpx;
+  margin-top: 200rpx;
+}
+.sancode{
+  border-radius: 15rpx;
+  background-color: #FEBE1B;
+  padding : 20rpx 100rpx;
 }
